--- a/src/photos/face-info.html
+++ b/src/photos/face-info.html
@@ -1,5 +1,5 @@
 <template>
-    <ux-dialog>
+    <ux-dialog ref="ux_dialog">
         <ux-dialog-header>
             <div class="centered-form" dir="${theme.rtltr}" style="background-color:rgba(0,0,0,0);padding-top:0px;"
                 innerHtml="${face.name}">
