--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -42,6 +42,9 @@
                                 ${"user.register" & t}
                             </button>
                         </div>
+                        <div if.bind="status_record.user_id > 0">
+                            <p dir="${theme.rtltr}" innerhtml.bind="consent" >
+                        </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded" style="margin-bottom: 12px;">
                             <input type="text" class="form-control input-sm"
                                 value.bind="status_record.photo_info.photographer_name"
@@ -51,7 +54,8 @@
                             <input type="text" name="photo_name" id="photo_name" class="form-control input-sm"
                                 value.bind="status_record.photo_info.photo_name" t="[placeholder]groups.photo-name">
                         </div>
-                        <div if.bind="status_record.photo_uploaded">
+                        <div if.bind="status_record.photo_uploaded" mouseenter.trigger="explain_dates(true)" mouseleave.trigger="explain_dates(false)">
+                            <p dir="${theme.rtltr}" innerhtml.bind="explain_dates_range" if.bind="show_explain_dates"></p>
                             <date-range label="photos.photo-date" range_options.bind="[1,2,3,5,6,7,10,14,30]"
                                 base_date_str.bind="status_record.photo_info.photo_date_str"
                                 hide_label_if_no_date.bind="false" enable_days_range.bind="true"
