--- a/src/groups/upload-photo.html
+++ b/src/groups/upload-photo.html
@@ -33,7 +33,7 @@
             <div if.bind="phase=='photo-uploaded'"
                 class="picture ${photo_list.length > 0 ? 'photos-ready' : 'photos-not-ready'}">
                 <a click.delegate="openDialog()">
-                    <img src.bind="status_record.photo_url" height.bind="photo_height" />
+                    <img src.bind="status_record.photo_url" height.bind="photo_height" id="uploaded-photo" />
                 </a>
             </div>
         </div>
