full screen view

--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -81,8 +81,8 @@
                         <div class="form-group"
                             if.bind="status_record.photo_details_saved || (status_record.duplicate && ! dirty)"
                             style="margin-top:12px;" disabled.bind="dirty ? 'diabled' : ''">
-                            <button name="next" click.trigger="next_photo()" class="btn btn-info btn-block">
-                                <!-- disabled.bind="missing_fields"> -->
+                            <button name="next" click.trigger="next_photo()" class="btn btn-info btn-block"
+                                disabled.bind="missing_photo_info">
                                 ${"groups.next-photo" & t}
                             </button>
                         </div>
