prev/next photo in fullscreen mode

--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -2,9 +2,11 @@
     <require from="./full-size-photo.css"></require>
     <div class="slide unselectable" click.delegate="mark_face($event)" id="full-size-photo"
         style="z-index:0;margin-left:32px;cursor:default;display:flex;flex-direction:column;"
-        interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="drag_move_photo($event)">
+        fullscreenchange.delegate="fullscreen_change($event)"
+        interact-draggable.bind="theme.interact_setting" 
+        interact-dragmove.delegate="drag_move_photo($event)">
         <div style="display:flex;flex-direction:row-reverse;">
-            <div class="slide full-size-photo" click.delegate="mark_face($event)"
+            <div class="slide full-size-photo"
                 css="height: ${slide[slide.side].height}px; width:${Math.max(slide[slide.side].width + 32,640)}px;position:relative;">
                 <img src="${slide[slide.side].src}" height="${slide[slide.side].height}" id="photo-image"
                     width="${slide[slide.side].width}" />
