--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -2,14 +2,30 @@
     <require from="./full-size-photo.css"></require>
     <div class="slide unselectable" click.delegate="mark_face($event)" id="full-size-photo"
         style="z-index:0;margin-left:32px;cursor:default;display:flex;flex-direction:column;"
-        fullscreenchange.delegate="fullscreen_change($event)"
-        interact-draggable.bind="theme.interact_setting" 
+        fullscreenchange.delegate="fullscreen_change($event)" interact-draggable.bind="theme.interact_setting"
         interact-dragmove.delegate="drag_move_photo($event)">
         <div style="display:flex;flex-direction:row-reverse;">
             <div class="slide full-size-photo"
                 css="height: ${slide[slide.side].height}px; width:${Math.max(slide[slide.side].width + 32,640)}px;position:relative;">
-                <img src="${slide[slide.side].src}" height="${slide[slide.side].height}" id="photo-image"
-                    width="${slide[slide.side].width}" />
+                <div id="photo-image">
+                    <!-- <div class="fullscreen-navigator prev" if.bind="fullscreen_mode && can_go_backward"> -->
+                        <span if.bind="fullscreen_mode && can_go_backward" class="prev" click.delegate="prev_slide($event)">
+                            < 
+                        </span> 
+                    <!-- </div> -->
+                    <!-- <div class="fullscreen-navigator next" if.bind="fullscreen_mode && can_go_forward"> -->
+                        <span if.bind="fullscreen_mode && can_go_forward" class="next" click.delegate="next_slide($event)">
+                            >
+                        </span>
+                    <!-- </div> -->
+                    <img if.bind="fullscreen_mode" src="${slide[slide.side].src}" 
+                        css="width:${fullscreen_width}vw;height:${fullscreen_height}vh;margin-left:${fullscreen_margin}px;margin-top:${fullscreen_top_margin}px;"
+                        height="${slide[slide.side].height}"
+                        width="${slide[slide.side].width}" />
+                    <img if.bind="! fullscreen_mode" src="${slide[slide.side].src}" 
+                        height="${slide[slide.side].height}"
+                        width="${slide[slide.side].width}" />
+                </div>
                 <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)"
                     interact-draggable.bind="theme.interact_setting"
                     contextmenu.delegate="handle_context_menu(face, $event)" class="face"
